<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="3"
                android:background="@drawable/background_notrightmostcolumn"
                android:textSize="24sp"
                android:text="@string/clear" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/background_rightmostcolumn"
                android:contentDescription="@string/backspaceButton"
                app:srcCompat="@drawable/backspace_icon"
                tools:ignore="ImageContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPercent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/percent" />

            <Button
                android:id="@+id/buttonPositiveNegative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/positivenegative" />

            <Button
                android:id="@+id/buttonDecimal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/decimal" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_rightmostcolumn"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/nine" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_rightmostcolumn"
                android:text="@string/multiply" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/six" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_rightmostcolumn"
                android:text="@string/subtract" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/two" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/three" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_rightmostcolumn"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/zero" />

            <Button
                android:id="@+id/buttonLeftBracket"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/left_bracket" />

            <Button
                android:id="@+id/buttonRightBracket"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_notrightmostcolumn"
                android:text="@string/right_bracket" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="24sp"
                android:background="@drawable/background_rightmostcolumn"
                android:text="@string/equal" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:autofillHints="f"
        android:contentDescription="@string/screen"
        android:inputType="none"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>